# transcription_server

./: Cargo.toml  LICENSE  README.md
.github/workflows/: release.yml
src/: main.rs  recorder.rs  transcriber.rs
